Removed rounding inversion and added more complex rounding, cleaned up project

--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,10 @@ build/
 SmartShapesSettings.txt
 
 # Older versions
-versions/
-
-#AE test projects
-AE/
+Versions/
 
 FFX/Old/
 
 Expressions/
+
+# To remove cached folders type "git rm -r --cached ffx/old/"
